--- a/N5.md
+++ b/N5.md
@@ -3,3 +3,15 @@ title: N5
 layout: page
 ---
 
+# N5
+
+## Study Materials:
+
+- Vocabulary
+  - Nouns
+  - Verbs
+  - Adverbs
+  - Adjectives
+
+- Kanji
+  - N5 kanjis
