--- a/N5.md
+++ b/N5.md
@@ -3,15 +3,13 @@ title: N5
 layout: page
 ---
 
-# N5
+# Study Materials
 
-## Study Materials:
-
-- Vocabulary
+> Vocabulary
   - Nouns
   - Verbs
   - Adverbs
   - Adjectives
-
-- Kanji
-  - N5 kanjis
+  
+> Kanji
+  - N5 Kanjis
