--- a/N5.md
+++ b/N5.md
@@ -3,13 +3,19 @@ title: N5
 layout: page
 ---
 
-# Study Materials
+# > Study Materials
 
-> Vocabulary
-  - Nouns
-  - Verbs
-  - Adverbs
-  - Adjectives
-  
-> Kanji
-  - N5 Kanjis
+# Vocabulary
+
+- Nouns
+
+- Verbs
+
+- Adjectives
+
+- Adverbs
+
+# Kanji
+
+- N5 kanjis
+
