--- a/N5.md
+++ b/N5.md
@@ -3,19 +3,21 @@ title: N5
 layout: page
 ---
 
-# > Study Materials
+# Study Materials
 
-# Vocabulary
-
+# > Vocabulary
 - Nouns
-
 - Verbs
-
 - Adjectives
-
 - Adverbs
 
-# Kanji
-
+# > Kanji
 - N5 kanjis
 
+# > Sample Paper
+- Official Sample Paper
+- Answer Key
+
+# References
+- [Quiz, Listening and grammer](http://www.jlptstudy.net/N5/)
+- [Sample Paper](http://jlpt.jp/e/samples/n5/index.html)
