--- a/N5.md
+++ b/N5.md
@@ -6,18 +6,22 @@ layout: page
 # Study Materials
 
 # > Vocabulary
-- Nouns
-- Verbs
-- Adjectives
-- Adverbs
+- Nouns: [PDF]
+- Verbs: [PDF]
+- い Adjectives [PDF]
+- な Adjectives [PDF]
+- Adverbs [PDF]
 
 # > Kanji
-- N5 kanjis
+- N5 kanjis [PDF]
 
 # > Sample Paper
-- Official Sample Paper
-- Answer Key
+- Official Sample Paper [PDF]
+- Answer Key [PDF]
 
 # References
 - [Quiz, Listening and grammer](http://www.jlptstudy.net/N5/)
 - [Sample Paper](http://jlpt.jp/e/samples/n5/index.html)
+- [App for learning Kanjis](https://play.google.com/store/apps/details?id=com.asji.kanjitree&hl=en_IN)
+- [App for Listening, Vocabulary and Grammar](https://play.google.com/store/apps/details?id=com.ocoder.grammar.vocabulary.japaness.jlpt.n5pro)
+- [App for Japanese dictionary](https://play.google.com/store/apps/details?id=jp.takoboto)
