--- a/N5.md
+++ b/N5.md
@@ -6,22 +6,26 @@ layout: page
 # Study Materials
 
 # > Vocabulary
-- Nouns: [PDF]
-- Verbs: [PDF]
-- い Adjectives [PDF]
-- な Adjectives [PDF]
-- Adverbs [PDF]
+- Nouns: [PDF](./pdf/N5-nouns.pdf)
+- Verbs: [PDF](./pdf/N5-verbs.pdf)
+- い Adjectives [PDF](./pdf/N5-い-adjective.pdf)
+- な Adjectives [PDF](./pdf/N5-な-adjectives.pdf)
+- Adverbs [PDF](./pdf/N5-adverbs.pdf)
 
 # > Kanji
-- N5 kanjis [PDF]
+- N5 kanjis [PDF](./pdf/N5-kanji.pdf)
 
 # > Sample Paper
-- Official Sample Paper [PDF]
-- Answer Key [PDF]
+- Official Sample Paper [PDF](./pdf/N5-official-sample-paper.pdf)
+- Answer Key [PDF](./pdf/N5-sample-paper-answers.pdf)
 
 # References
+
+# > Websites
 - [Quiz, Listening and grammer](http://www.jlptstudy.net/N5/)
 - [Sample Paper](http://jlpt.jp/e/samples/n5/index.html)
+
+# > Apps
 - [App for learning Kanjis](https://play.google.com/store/apps/details?id=com.asji.kanjitree&hl=en_IN)
 - [App for Listening, Vocabulary and Grammar](https://play.google.com/store/apps/details?id=com.ocoder.grammar.vocabulary.japaness.jlpt.n5pro)
 - [App for Japanese dictionary](https://play.google.com/store/apps/details?id=jp.takoboto)
