--- a/N5.md
+++ b/N5.md
@@ -6,7 +6,7 @@ layout: page
 # Study Materials
 
 # > Vocabulary
-- Nouns: [PDF](./pdf/N5-nouns.pdf)
+- Nouns: <a href="./pdf/N5-nouns.pdf" target="_blank">&lt;PDF&gt;</a>
 - Verbs: [PDF](./pdf/N5-verbs.pdf)
 - い Adjectives [PDF](./pdf/N5-い-adjective.pdf)
 - な Adjectives [PDF](./pdf/N5-な-adjectives.pdf)
