--- a/N5.md
+++ b/N5.md
@@ -6,18 +6,18 @@ layout: page
 # Study Materials
 
 # > Vocabulary
-- Nouns: <a href="./pdf/N5-nouns.pdf" target="_blank">&lt;PDF&gt;</a>
-- Verbs: [PDF](./pdf/N5-verbs.pdf)
-- い Adjectives [PDF](./pdf/N5-い-adjective.pdf)
-- な Adjectives [PDF](./pdf/N5-な-adjectives.pdf)
-- Adverbs [PDF](./pdf/N5-adverbs.pdf)
+- Nouns <a href="./pdf/N5-nouns.pdf" target="_blank">&lt;PDF&gt;</a>
+- Verbs <a href="./pdf/N5-verbs.pdf" target="_blank">&lt;PDF&gt;</a>
+- い Adjectives <a href="./pdf/N5-い-adjective.pdf" target="_blank">&lt;PDF&gt;</a>
+- な Adjectives <a href="./pdf/N5-な-adjectives.pdf" target="_blank">&lt;PDF&gt;</a>
+- Adverbs <a href="./pdf/N5-adverbs.pdf" target="_blank">&lt;PDF&gt;</a>
 
 # > Kanji
-- N5 kanjis [PDF](./pdf/N5-kanji.pdf)
+- N5 kanjis <a href="./pdf/N5-kanji.pdf" target="_blank">&lt;PDF&gt;</a>
 
 # > Sample Paper
-- Official Sample Paper [PDF](./pdf/N5-official-sample-paper.pdf)
-- Answer Key [PDF](./pdf/N5-sample-paper-answers.pdf)
+- Official Sample Paper <a href="./pdf/N5-official-sample-paper.pdf" target="_blank">&lt;PDF&gt;</a>
+- Answer Key <a href="./pdf/N5-sample-paper-answers.pdf" target="_blank">&lt;PDF&gt;</a>
 
 # References
 
