--- a/N5.md
+++ b/N5.md
@@ -6,14 +6,14 @@ layout: page
 # Study Materials
 
 # > Vocabulary
-- Nouns <a href="./pdf/N5-nouns.pdf" target="_blank">&lt;PDF&gt;</a>
-- Verbs <a href="./pdf/N5-verbs.pdf" target="_blank">&lt;PDF&gt;</a>
-- い Adjectives <a href="./pdf/N5-い-adjective.pdf" target="_blank">&lt;PDF&gt;</a>
-- な Adjectives <a href="./pdf/N5-な-adjectives.pdf" target="_blank">&lt;PDF&gt;</a>
-- Adverbs <a href="./pdf/N5-adverbs.pdf" target="_blank">&lt;PDF&gt;</a>
+- <a href="./N5/nouns.md">Nouns</a>
+- Verbs 
+- い Adjectives 
+- な Adjectives 
+- Adverbs 
 
 # > Kanji
-- N5 kanjis <a href="./pdf/N5-kanji.pdf" target="_blank">&lt;PDF&gt;</a>
+- N5 kanjis 
 
 # > Sample Paper
 - Official Sample Paper <a href="./pdf/N5-official-sample-paper.pdf" target="_blank">&lt;PDF&gt;</a>
