--- a/N5.md
+++ b/N5.md
@@ -6,7 +6,7 @@ layout: page
 # Study Materials
 
 # > Vocabulary
-- <a href="./N5/nouns.md">Nouns</a>
+- <a href="./N5-nouns.md">Nouns</a>
 - Verbs 
 - い Adjectives 
 - な Adjectives 
