--- a/N5.md
+++ b/N5.md
@@ -6,7 +6,7 @@ layout: page
 # Study Materials
 
 # > Vocabulary
-- <a href="./_posts/N5-nouns.md">Nouns</a>
+- <a href="https://devansh3712.github.io/JLPT-Senpai-N5/nouns.html">Nouns</a>
 - Verbs 
 - い Adjectives 
 - な Adjectives 
