--- a/N5.md
+++ b/N5.md
@@ -7,7 +7,7 @@ layout: page
 
 # > Vocabulary
 - <a href="https://devansh3712.github.io/JLPT-Senpai-md/nouns.html">Nouns</a>
-- Verbs 
+- <a href="https://devansh3712.github.io/JLPT-Senpai-md/verbs.html">Verbs</a>
 - い Adjectives 
 - な Adjectives 
 - Adverbs 
