--- a/N5.md
+++ b/N5.md
@@ -8,7 +8,7 @@ layout: page
 # > Vocabulary
 - <a href="https://devansh3712.github.io/JLPT-Senpai-md/nouns.html">Nouns</a>
 - <a href="https://devansh3712.github.io/JLPT-Senpai-md/verbs.html">Verbs</a>
-- い Adjectives 
+- <a href="https://devansh3712.github.io/JLPT-Senpai-md/i-adj.html">い Adjectives</a>
 - な Adjectives 
 - Adverbs 
 
