--- a/N5.md
+++ b/N5.md
@@ -9,7 +9,7 @@ layout: page
 - <a href="https://devansh3712.github.io/JLPT-Senpai-md/nouns.html">Nouns</a>
 - <a href="https://devansh3712.github.io/JLPT-Senpai-md/verbs.html">Verbs</a>
 - <a href="https://devansh3712.github.io/JLPT-Senpai-md/i-adj.html">い Adjectives</a>
-- な Adjectives 
+- <a href="https://devansh3712.github.io/JLPT-Senpai-md/na-adj.html">な Adjectives</a> 
 - Adverbs 
 
 # > Kanji
