--- a/N5.md
+++ b/N5.md
@@ -10,7 +10,7 @@ layout: page
 - <a href="https://devansh3712.github.io/JLPT-Senpai-md/verbs.html">Verbs</a>
 - <a href="https://devansh3712.github.io/JLPT-Senpai-md/i-adj.html">い Adjectives</a>
 - <a href="https://devansh3712.github.io/JLPT-Senpai-md/na-adj.html">な Adjectives</a> 
-- Adverbs 
+- <a href="https://devansh3712.github.io/JLPT-Senpai-md/adverbs.html">Adverbs</a> 
 
 # > Kanji
 - N5 kanjis 
