--- a/N5.md
+++ b/N5.md
@@ -13,7 +13,7 @@ layout: page
 - <a href="https://devansh3712.github.io/JLPT-Senpai-md/adverbs.html">Adverbs</a> 
 
 # > Kanji
-- N5 kanjis 
+- <a href="https://devansh3712.github.io/JLPT-Senpai-md/N5-kanji.html">N5 kanjis</a> 
 
 # > Sample Paper
 - Official Sample Paper <a href="./pdf/N5-official-sample-paper.pdf" target="_blank">&lt;PDF&gt;</a>
