--- a/N5.md
+++ b/N5.md
@@ -6,11 +6,11 @@ layout: page
 # Study Materials
 
 # > Vocabulary
-- <a href="https://devansh3712.github.io/JLPT-Senpai-md/nouns.html">Nouns</a>
-- <a href="https://devansh3712.github.io/JLPT-Senpai-md/verbs.html">Verbs</a>
-- <a href="https://devansh3712.github.io/JLPT-Senpai-md/i-adj.html">い Adjectives</a>
-- <a href="https://devansh3712.github.io/JLPT-Senpai-md/na-adj.html">な Adjectives</a> 
-- <a href="https://devansh3712.github.io/JLPT-Senpai-md/adverbs.html">Adverbs</a> 
+- <a href="https://devansh3712.github.io/JLPT-Senpai-md/N5-nouns.html">Nouns</a>
+- <a href="https://devansh3712.github.io/JLPT-Senpai-md/N5-verbs.html">Verbs</a>
+- <a href="https://devansh3712.github.io/JLPT-Senpai-md/N5-i-adj.html">い Adjectives</a>
+- <a href="https://devansh3712.github.io/JLPT-Senpai-md/N5-na-adj.html">な Adjectives</a> 
+- <a href="https://devansh3712.github.io/JLPT-Senpai-md/N5-adverbs.html">Adverbs</a> 
 
 # > Kanji
 - <a href="https://devansh3712.github.io/JLPT-Senpai-md/N5-kanji.html">N5 kanjis</a> 
