--- a/N5.md
+++ b/N5.md
@@ -6,26 +6,31 @@ layout: page
 # Study Materials
 
 # > Vocabulary
-- <a href="https://devansh3712.github.io/JLPT-Senpai-md/N5-nouns.html">Nouns</a>
-- <a href="https://devansh3712.github.io/JLPT-Senpai-md/N5-verbs.html">Verbs</a>
-- <a href="https://devansh3712.github.io/JLPT-Senpai-md/N5-i-adj.html">い Adjectives</a>
-- <a href="https://devansh3712.github.io/JLPT-Senpai-md/N5-na-adj.html">な Adjectives</a> 
-- <a href="https://devansh3712.github.io/JLPT-Senpai-md/N5-adverbs.html">Adverbs</a> 
+# &nbsp;
+- [Nouns](./N5-nouns.md)
+- [Verbs](./N5-verbs.md)
+- [い Adjectives](./N5-i-adj.md)
+- [な Adjectives](./N5-na-adj.md)
+- [Adverbs](./N5-adverbs.md)
 
 # > Kanji
-- <a href="https://devansh3712.github.io/JLPT-Senpai-md/N5-kanji.html">N5 kanjis</a> 
+# &nbsp;
+- [N5 kanjis](./N5-kanji.md)
 
 # > Sample Paper
+# &nbsp;
 - Official Sample Paper <a href="./pdf/N5-official-sample-paper.pdf" target="_blank">&lt;PDF&gt;</a>
 - Answer Key <a href="./pdf/N5-sample-paper-answers.pdf" target="_blank">&lt;PDF&gt;</a>
 
 # References
 
 # > Websites
+# &nbsp;
 - [Quiz, Listening and grammer](http://www.jlptstudy.net/N5/)
 - [Sample Paper](http://jlpt.jp/e/samples/n5/index.html)
 
 # > Apps
+# &nbsp;
 - [App for learning Kanjis](https://play.google.com/store/apps/details?id=com.asji.kanjitree&hl=en_IN)
 - [App for Listening, Vocabulary and Grammar](https://play.google.com/store/apps/details?id=com.ocoder.grammar.vocabulary.japaness.jlpt.n5pro)
 - [App for Japanese dictionary](https://play.google.com/store/apps/details?id=jp.takoboto)
