--- a/N5.md
+++ b/N5.md
@@ -12,6 +12,7 @@ layout: page
 - [い Adjectives](./N5-i-adj.md)
 - [な Adjectives](./N5-na-adj.md)
 - [Adverbs](./N5-adverbs.md)
+- [Expressions](./N5-exp.md)
 
 # > Grammar
 
@@ -29,13 +30,19 @@ layout: page
 
 - Official Sample Paper <a href="./pdf/N5-official-sample-paper.pdf" target="_blank">&lt;PDF&gt;</a>
 - Answer Key <a href="./pdf/N5-sample-paper-answers.pdf" target="_blank">&lt;PDF&gt;</a>
+- [Practice Test](https://jlptsensei.com/downloads/jlpt-n5-practice-test/)
+
+# > All in one Work Book
+
+- [Download zip file](https://jlptbootcamp.com/JEES-tests/N5-practice-book.zip)
 
 # References
 
 # > Websites
 
-- [Quiz, Listening and grammer](http://www.jlptstudy.net/N5/)
+- [Listening, Comprehension, Grammar and Quiz](http://www.jlptstudy.net/N5/)
 - [Sample Paper](http://jlpt.jp/e/samples/n5/index.html)
+- [Quiz](https://www.mlcjapanese.co.jp/n5_jlpt_kanji_quiz_01.html)
 
 # > Apps
 
